# EBterm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE
docs/: architecture-review.md  architecture-simplification-plan.md  backend-api.md  frontend-design.md  session-module-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: tauri.ts
frontend/src/components/: CommandPanel.vue  ConfigPanel.vue  ProfileDropdown.vue  ProfileSelectorDialog.vue  SaveProfileDialog.vue  SearchBar.vue  StatusBar.vue  TabBar.vue  Terminal.vue  TerminalPane.vue
frontend/src/composables/: useTauriEvents.ts  useTerminal.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/plugins/: naive.ts
frontend/src/router/: index.ts
frontend/src/services/: profileStorage.ts
frontend/src/stores/: commandPanel.ts  connection.ts  index.ts  session.ts  terminal.ts  ui.ts
frontend/src/types/: ipc.ts
scripts/: telnet_server.py
src/: error.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: connection_context.rs  data_streamer.rs  ipc.rs  main.rs  state.rs
src-tauri/src/commands/: command.rs  connection.rs  logging.rs  mod.rs  session.rs
src/command/: manager.rs  mod.rs  parser.rs
src/connection/: discovery.rs  manager.rs  mod.rs  registry.rs  serial.rs  telnet.rs  types.rs
src/logger/: file.rs  mod.rs  traits.rs
src/session/: connection_registry.rs  manager.rs  mod.rs  types.rs
tests/: command_integration.rs  command_session_integration.rs  common.rs  connection_contract.rs  connection_integration.rs  logger_integration.rs  logger_session_integration.rs  resource_cleanup_integration.rs  session_integration.rs  telnet_integration.rs  workflow_e2e_integration.rs
tests/common/: mocks.rs  mod.rs
