[package]
name = "embedded-debugger-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Embedded Debugger Team"]
description = "Tauri application for embedded-debugger"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-open", "dialog-save", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
embedded-debugger = { path = ".." }
serial2 = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
